--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-# LA Crime Statistics vs. Homeless Population
+<h1>LA Crime Statistics vs. Homeless Population</h1>
 
-## Hypothosis
+</h2>Hypothosis</h2>
+<p>We wanted to see if there was any corelation between homeless rates and crime rates in LA</p>
 
-We wanted to see if there was any corelation between homeless rates and crime rates in LA
-
-## Data
-
-We pulled data from 2 sources
+<h2>Data</h2
+  <p>We pulled data from 2 sources</p>
