--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<h1>LA Crime Statistics vs. Homeless Population</h1>
+<h1>City of Los Angeles Crime and Homelessness</h1>
 
-</h2>Hypothosis</h2>
-<p>We wanted to see if there was any corelation between homeless rates and crime rates in LA</p>
+<h2>Authors</h2>
+<p>Rick Spitzer, Tolga Caglar, Ben Galde</p>
 
-<h2>Data</h2
-  <p>We pulled data from 2 sources</p>
+<h2>Data</h2>
+<p>We pulled data from 2 sources</p>
+<ul>
+  <li><a href="https://www.kaggle.com/kingburrito666/los-angeles-crime" target="_blank">los-angeles-crime</a></li>
+  <li><a href="https://www.kaggle.com/adamschroeder/homelessness-comparison-between-states" target="_blank">homelessness-comparison-between-states</a></li>
+</ul>
+
+<h2></h2>
+<h3>Details of the data?</h3>
+<ul>
+  <li>What crime occurs most?  Least?</li>
+<li>How many times each crime yearly?  Any significant increases or decreases?</li>
+<li>Any patterns in the data?</li>
+<li>Hours in the day?</li>
+<li>Month of the year?  Holidays?</li>
+<li>Area in LA County?</li>
+<li>Any kind of data affecting crime rate? Homeslessness?</li>
+ </ul>
